--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Irene's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: blue;">
+
+  </body>
   <table cellspacing ="20">
     <tr>
-      <td><img src="Irene Picture\Irene Cropped Pic.png" alt="irene profile picture"></td>
+      <td><img src="IreneCroppedPic.png" alt="irene profile picture"></td>
       <td><h1>Irene Njongwa</h1>
         <p><em><a href"=<a href="https://www.linkedin.com/in/irene-njongwa-3a27029/">Entrepreneur</a> and <strong>Full Stack JavaScript Developer</strong>.</em></p>
 
@@ -101,7 +103,7 @@
 <hr>
   <a href="hobbies.html">My Hobbies</a>
   <a href="contact.html">Contact Me</a>
-  
+
 
 
 
