--- a/index.html
+++ b/index.html
@@ -4,105 +4,111 @@
 <head>
   <meta charset="utf-8">
   <title>Irene's Personal Site</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color: blue;">
+<body style="background-color: #EAF6F6;">
 
-  </body>
-  <table cellspacing ="20">
-    <tr>
-      <td><img src="IreneCroppedPic.png" alt="irene profile picture"></td>
-      <td><h1>Irene Njongwa</h1>
-        <p><em><a href"=<a href="https://www.linkedin.com/in/irene-njongwa-3a27029/">Entrepreneur</a> and <strong>Full Stack JavaScript Developer</strong>.</em></p>
 
-        <p>I am a self-taught full stack JavaScript developer. I have a passion for creating software products that meet the accessibility and diversity needs of businesses. I work as a direct support professional and I also run a small business online selling consumer goods through Amazon. I love
-          coffee, books, and travel.</p></td>
-      </tr>
-    </table>
+</body>
+<table cellspacing="20">
+  <tr>
+    <td><img src="IreneCroppedPic.png" alt="irene profile picture"></td>
+    <td>
+      <h1>Irene Njongwa</h1>
+      <p><em><a href"=<a href="https://www.linkedin.com/in/irene-njongwa-3a27029/">Entrepreneur</a> and <strong>Full Stack JavaScript Developer</strong>.</em></p>
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Bachelor of Business Administration</li>
-    <li>Diversity and Inclusion Certificate</li>
-    <li>CompTIA A+ Certification</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-    <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-          <tr>
-      <td>2009</td>
-      <td>Call Center Customer Service at West At Home</td>
-    </tr>
-    <tr>
-      <td>2009 -2012</td>
-      <td>Content Writer at Demand Media Studios</td>
-    </tr>
-    <tr>
-      <td>2012-2019</td>
-      <td>Search Engine Evalutor at Lionbridge</td>
-    </tr>
-    <tr>
-      <td>2019-2021</td>
-      <td>Search Engine Evaluator at Appen Inc</td>
-    </tr>
-    <tr>
-      <td>2019-2020</td>
-      <td>Food Delivery Driver at Grubhub Inc</td>
-    </tr>
-    <tr>
-      <td>2019-Current</td>
-      <td>Direct Support Professional at Orion ISO</td>
-    </tr>
+      <p>I am a self-taught full stack JavaScript developer. I have a passion for creating software products that meet the accessibility and diversity needs of businesses. I work as a direct support professional and I also run a small business online
+        selling consumer goods through Amazon. I love
+        coffee, books, and travel.</p>
+    </td>
+  </tr>
+</table>
 
-  </table>
-  <hr>
-  <h3>Skills</h3>
-
-  <table cellspacing ="10">
-
-    <tr>
-      <td>Customer service</td>
-      <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Search engine evaluation</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-      <tr>
-        </tr><td>Microsoft Office</td>
-      <td>⭐⭐⭐⭐</td>
-      </tr>
-    <tr>
-      <td>Search engine optimization </td>
-      <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐⭐</td>
-        </tr>
-      <tr>
-        <td>CSS</td>
-        <td>⭐</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>⭐</td>
-          </tr>
-
-  </table>
 <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact.html">Contact Me</a>
+<h3>Education</h3>
+<ul>
+  <li>Bachelor of Business Administration</li>
+  <li>Diversity and Inclusion Certificate</li>
+  <li>CompTIA A+ Certification</li>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+</ul>
+<hr>
+<h3>Work Experience</h3>
+<table cellspacing="10">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Work</th>
+    </tr>
+  </thead>
+  <tr>
+    <td>2009</td>
+    <td>Call Center Customer Service at West At Home</td>
+  </tr>
+  <tr>
+    <td>2009 -2012</td>
+    <td>Content Writer at Demand Media Studios</td>
+  </tr>
+  <tr>
+    <td>2012-2019</td>
+    <td>Search Engine Evalutor at Lionbridge</td>
+  </tr>
+  <tr>
+    <td>2019-2021</td>
+    <td>Search Engine Evaluator at Appen Inc</td>
+  </tr>
+  <tr>
+    <td>2019-2020</td>
+    <td>Food Delivery Driver at Grubhub Inc</td>
+  </tr>
+  <tr>
+    <td>2019-Current</td>
+    <td>Direct Support Professional at Orion ISO</td>
+  </tr>
+
+</table>
+<hr>
+<h3>Skills</h3>
+
+<table cellspacing="10">
+
+  <tr>
+    <td>Customer service</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>Search engine evaluation</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+
+    <td>Microsoft Office</td>
+    <td>⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>Search engine optimization </td>
+    <td>⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>HTML</td>
+    <td>⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>CSS</td>
+    <td>⭐</td>
+  </tr>
+  <tr>
+    <td>JavaScript</td>
+    <td>⭐</td>
+  </tr>
+
+</table>
+<hr>
+<a href="hobbies.html">My Hobbies</a>
+<a href="contact.html">Contact Me</a>
 
 
 
