Add updated website

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Irene Njongwa</h1>
       <p><em><a href"=<a href="https://www.linkedin.com/in/irene-njongwa-3a27029/">Entrepreneur</a> and <strong>Full Stack JavaScript Developer</strong>.</em></p>
 
-      <p>I am a self-taught full stack JavaScript developer. I have a passion for creating software products that meet the accessibility and diversity needs of businesses. I work as a direct support professional and I also run a small business online
+      <p>I am a self-taught full stack JavaScript developer. I have a passion for creating software products that cater to the accessibility and diversity needs of businesses. I work as a direct support professional and I also run a small business online
         selling consumer goods through Amazon. I love
         coffee, books, and travel.</p>
     </td>
@@ -94,15 +94,15 @@
   </tr>
   <tr>
     <td>HTML</td>
-    <td>⭐⭐⭐</td>
+    <td>⭐⭐⭐⭐</td>
   </tr>
   <tr>
     <td>CSS</td>
-    <td>⭐</td>
+    <td>⭐⭐⭐⭐</td>
   </tr>
   <tr>
     <td>JavaScript</td>
-    <td>⭐</td>
+    <td>⭐⭐⭐⭐</td>
   </tr>
 
 </table>
