--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Irene's Personal Site</title>
-<link rel="stylesheet" href="css/styles.css">
+<link href="resources\css\style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body style="background-color: #EAF6F6;">
